cmake_minimum_required(VERSION 3.14)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 main.cpp)
add_executable(add1 testy.cpp)
add_executable(add2 Inert_sort.cpp)
add_executable(bucket Bucket_sort.cpp)
add_executable(fast Fast_sort.cpp)
add_executable(merge Merge_sort.cpp)
add_executable(pointer Pointer.cpp)
add_executable(yhsanjiao YhuiAngle.cpp)
add_executable(linked Linked_01.cpp)
add_executable(double DoubleLinked_02.cpp)
add_executable(josefu JosefuCircle.cpp)
add_executable(stack Stack_01.cpp)
add_executable(kuohao KuohaoPiPei_Stack.cpp)
add_executable(queue Queue_c.cpp)
add_executable(houzhui Houzhui_02.cpp)
add_executable(tree Tree_03.cpp)